--- a/AudioShare/Info.plist
+++ b/AudioShare/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.zeta.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>com.lanoukeji.ZZZZZ</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -22,15 +22,19 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
-	<key>UIBackgroundModes</key>
+	<key>CFBundleIconFiles</key>
 	<array>
-		<string>audio</string>
+		<string>icon.jpg</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
